# uvdemo

./: .gitignore  data_analysis.ipynb  dateframenb.ipynb  examplenb.ipynb  main.py  matplotlibnb.ipynb  numpynb.ipynb  pyproject.toml  seriesnb.ipynb
ailab/: California Housing.ipynb  MNIST Fashion.ipynb
learnpytorch/: 00_pytorch_fundamentals.ipynb  01_pytorch_workflow.ipynb  02_pytorch_classification.ipynb
learnpytorch/models/: pytorch_workflow_model.pth
llm/: GPT2Model.ipynb  MultiHeadAttention.ipynb  evaluating_loss.ipynb  gpt_download.py  llm.py  load pre-trained weights.ipynb  nomalization.ipynb  pre_training_llm.ipynb  saving and loading weights.ipynb  shortcut.ipynb  top k sampling and temperature scaling.ipynb  transformerblock.ipynb
