[project]
name = "uvdemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pydot>=4.0.1",
    "requests>=2.32.5",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[dependency-groups]
dev = []
